--- a/.github/workflows/label-sync.yml
+++ b/.github/workflows/label-sync.yml
@@ -19,4 +19,4 @@ jobs:
 
       - env:
           PERSONAL_ACCESS_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
-        run: ./sync-labels.sh
+        run: ./labels/sync.sh
