--- a/labels/labels.yml
+++ b/labels/labels.yml
@@ -59,6 +59,8 @@
   aliases:
     - "beginner-friendly"
     - beginner
+    - "good first issue"
+    - "good-first-issue"
     - "good-starter-issue"
     - "starter-issue"
 
