update cib settings

--- a/.github/issue-branch.yml
+++ b/.github/issue-branch.yml
@@ -1,3 +1,4 @@
+# https://github.com/marketplace/actions/create-issue-branch#configuration
 mode: chatops
-branchName: full
+branchName: "issue-${issue.number}-${issue.title,}"
 autoCloseIssue: true
