--- a/labels/labels.yml
+++ b/labels/labels.yml
@@ -11,7 +11,7 @@
   color: "009800"
   description: "New feature or request"
 
-- name: "type: chore 🚮"
+- name: "type: chore 🧺"
   color: "fbca04"
   description: "Clean up, refactors, "  
 
