change create issue branch behavior

--- a/.github/issue-branch.yml
+++ b/.github/issue-branch.yml
@@ -1,4 +1,4 @@
 # https://github.com/marketplace/actions/create-issue-branch#configuration
-mode: chatops
+mode: auto
 branchName: "issue-${issue.number}-${issue.title,}"
 autoCloseIssue: true
