--- a/.github/issue-branch.yml
+++ b/.github/issue-branch.yml
@@ -1,5 +1,5 @@
 # https://github.com/marketplace/actions/create-issue-branch#configuration
 mode: auto
 silent: false
-branchName: "issue-${issue.number}-${issue.title,}"
+branchName: "issue-${issue.number}/${issue.title,}"
 autoCloseIssue: true
