--- a/workflow-templates/pr-housekeeping.yml
+++ b/workflow-templates/pr-housekeeping.yml
@@ -5,17 +5,19 @@ on:
     types: [assigned, opened, synchronize, reopened, edited, closed]
 
 jobs:
-  assign_author:
+  assign-author:
     runs-on: ubuntu-latest
     steps:
       - name: Assign author to PR
         if: ${{ github.event.action == 'opened' }}
         uses: technote-space/assign-author@v1
 
-  add_an_issue_reference:
+  issue-link:
     runs-on: ubuntu-latest
     steps:
-      - uses: kentaro-m/add-an-issue-reference-action@v2.0.0
+      - uses: tkt-actions/add-issue-links@v1.2.0
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           branch-prefix: issue-
+          position: top
+          resolve: true
