--- a/.github/workflows/housekeeping.yml
+++ b/.github/workflows/housekeeping.yml
@@ -20,7 +20,7 @@ jobs:
     steps:
       - uses: tkt-actions/add-issue-links@v1.4.0
         with:
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          repo-token: ${{ secrets.ORG_PROJECT_TOKEN }}
           branch-prefix: issue-
           position: top
           resolve: true
