--- a/.github/workflows/housekeeping.yml
+++ b/.github/workflows/housekeeping.yml
@@ -5,14 +5,11 @@ on:
     types: [opened]
   issues:
     types: [opened, assigned]
-
-env:
-  DEFAULT_BRANCH: trunk
-
+        
 jobs:
   assign-author:
     runs-on: ubuntu-latest
-    if: github.event_name == 'pull_request' && github.event.action == 'opened'
+    if: github.event_name == 'pull_request' && github.event.action == 'opened'    
     steps:
       - name: Assign author to PR
         uses: technote-space/assign-author@v1
@@ -29,12 +26,31 @@ jobs:
           resolve: true
           link-style: body
 
-  add-new-issue-to-column:
+  add-new-issue-to-column--issue:
     runs-on: ubuntu-latest
-    if: github.event_name == 'issue' && github.event.action == 'opened'
+    if: github.event_name == 'issues' && github.event.action == 'opened'
     steps:
       - uses: konradpabjan/actions-add-new-issue-to-column@v1.1
         with:
           action-token: ${{ secrets.ORG_PROJECT_TOKEN }}
           project-url: https://github.com/orgs/takeshape/projects/2
           column-name: Backlog
+
+  add-new-issue-to-column--pr:
+    runs-on: ubuntu-latest
+    if: github.event_name == 'pull_request' && github.event.action == 'opened'
+    steps:
+      - uses: konradpabjan/actions-add-new-issue-to-column@v1.1
+        with:
+          action-token: ${{ secrets.ORG_PROJECT_TOKEN }}
+          project-url: https://github.com/orgs/takeshape/projects/2
+          column-name: Waiting on Review
+          
+  create-pr-comment:
+    runs-on: ubuntu-latest
+    if: github.event_name == 'issues' && github.event.action == 'assigned'
+    steps:
+      - uses: actions/checkout@v2
+      - uses: takeshape/github-action-create-pr-comment@trunk
+        with:
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
