--- a/workflow-templates/housekeeping.yml
+++ b/workflow-templates/housekeeping.yml
@@ -4,12 +4,12 @@ on:
   pull_request:
     types: [opened]
   issues:
-    types: [opened]
-
+    types: [opened, assigned]
+        
 jobs:
   assign-author:
     runs-on: ubuntu-latest
-    if: github.event_name == 'pull_request' && github.event.action == 'opened'
+    if: github.event_name == 'pull_request' && github.event.action == 'opened'    
     steps:
       - name: Assign author to PR
         uses: technote-space/assign-author@v1
@@ -24,11 +24,11 @@ jobs:
           branch-prefix: issue-
           position: top
           resolve: true
-          link-style: comment
+          link-style: body
 
-  add-new-issue-to-column:
+  add-new-issue-to-column--issue:
     runs-on: ubuntu-latest
-    if: github.event_name == 'issue' && github.event.action == 'opened'
+    if: github.event_name == 'issues' && github.event.action == 'opened'
     steps:
       - uses: konradpabjan/actions-add-new-issue-to-column@v1.1
         with:
@@ -36,8 +36,19 @@ jobs:
           project-url: https://github.com/orgs/takeshape/projects/2
           column-name: Backlog
 
+  add-new-issue-to-column--pr:
+    runs-on: ubuntu-latest
+    if: github.event_name == 'pull_request' && github.event.action == 'opened'
+    steps:
+      - uses: konradpabjan/actions-add-new-issue-to-column@v1.1
+        with:
+          action-token: ${{ secrets.ORG_PROJECT_TOKEN }}
+          project-url: https://github.com/orgs/takeshape/projects/2
+          column-name: Waiting on Review
+          
   create-pr-comment:
     runs-on: ubuntu-latest
+    if: github.event_name == 'issues' && github.event.action == 'assigned'
     steps:
       - uses: actions/checkout@v2
       - uses: takeshape/github-action-create-pr-comment@trunk
