--- a/.github/create-pr-comment.yml
+++ b/.github/create-pr-comment.yml
@@ -1,6 +1,10 @@
-branchName: "issue-${issue.number}/${issue.title,}"
+branchName: 'issue-${issue.number}/${issue.title,}'
 branches:
-  - label: "bug"
-    template: "bug.md"
-  - label: "/enhancement/"
-    template: "feature.md"
+  - label: '/bug/'
+    template: 'bug.md'
+  - label: '/feature/'
+    template: 'feature.md'
+  - label: '/chore/'
+    template: 'chore.md'
+  - label: '/documentation/'
+    template: 'documentation.md'
