--- a/.github/workflows/workflow-sync.yml
+++ b/.github/workflows/workflow-sync.yml
@@ -13,8 +13,8 @@ env:
     takeshape/takeshape-gatsby
     takeshape/twithub
   WORKFLOW_FILES: |
-    ./.github/create-pr-comment.yml
-    ./.github/workflows/housekeeping.yml
+    ./.github/create-pr-comment.yml=./.github/create-pr-comment.yml
+    ./.github/workflows/housekeeping.yml=./.github/workflows/housekeeping.yml
     
 jobs:
   github-workflow-sync:
