--- a/workflow-templates/housekeeping.yml
+++ b/workflow-templates/housekeeping.yml
@@ -34,7 +34,7 @@ jobs:
         with:
           action-token: ${{ secrets.ORG_PROJECT_TOKEN }}
           project-url: https://github.com/orgs/takeshape/projects/2
-          column-name: Backlog
+          column-name: Icebox
 
   add-new-issue-to-column--pr:
     runs-on: ubuntu-latest
@@ -45,7 +45,7 @@ jobs:
           action-token: ${{ secrets.ORG_PROJECT_TOKEN }}
           project-url: https://github.com/orgs/takeshape/projects/2
           column-name: Waiting on Review
-          
+
   create-pr-comment:
     runs-on: ubuntu-latest
     if: github.event_name == 'issues' && github.event.action == 'assigned'
