--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -1,7 +1,8 @@
 name: Release Drafter
 
 on:
-  issues: [assigned] 
+  issues:
+    types: [opened, assigned]
 #   push:
 #     branches:
 #       - trunk
