--- a/.github/issue-branch.yml
+++ b/.github/issue-branch.yml
@@ -1,5 +1,21 @@
-# https://github.com/marketplace/actions/create-issue-branch#configuration
+# https://github.com/robvanderleek/create-issue-branch#option-2-configure-github-action
 mode: auto
 silent: false
 branchName: "issue-${issue.number}/${issue.title,}"
 autoCloseIssue: true
+gitSafeReplacementChar: "-"
+branches:
+  - label: |
+      "type: feature 🔨"
+    prefix: feat/
+  - label: |
+      "type: bug 🐛"
+    prefix: fix/
+  - label: |
+      "type: chore 🧺"
+    prefix: chore/
+  - label: |
+      "type: documentation ✏️"
+    prefix: docs/
+  - label: "*"
+    skip: true
