--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -8,16 +8,44 @@ on:
 #       - trunk
 
 jobs:
-#   release-drafter:
-#     runs-on: ubuntu-latest
-#     steps:
-#       - uses: release-drafter/release-drafter@v5
-#         env:
-#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  test:
+  #   release-drafter:
+  #     runs-on: ubuntu-latest
+  #     steps:
+  #       - uses: release-drafter/release-drafter@v5
+  #         env:
+  #           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  create-issue-branch:
     runs-on: ubuntu-latest
-    if: |
-      github.event_name == 'issues' && github.event.action == 'assigned' && (contains(github.event.issue.labels.*.name, 'type: bug 🐛') || contains(github.event.issue.labels.*.name, 'type: feature 🔨')) 
     steps:
-      - run: |
-          echo "DOING IT!"
+      - uses: robvanderleek/create-issue-branch@master
+        id: create-issue-branch
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - if: steps.create-issue-branch.outputs.branchName != ''
+        id: template
+        env:
+          ISSUE_BRANCH_NAME: ${{ steps.create-issue-branch.outputs.branchName }}
+        run: |
+          name=$ISSUE_BRANCH_NAME
+          if [[ $name =~ ^fix/ ]]; then \
+            template="bug.md"; \
+          elif [[ $name =~ ^feat/ ]]; then \
+            template="feature.md"; \
+          elif [[ $name =~ ^chore/ ]]; then \
+            template="chore.md"
+          elif [[ $name =~ ^docs/ ]]; then \
+            template="documentation.md"
+          fi
+          echo "::set-output name=template-name::$template"
+
+      - uses: mshick/add-pr-comment@v1
+        if: steps.create-issue-branch.outputs.branchName != ''
+        env:
+          PULL_REQUEST_URL: ${{ format('https://github.com/{0}/compare/{1}...{2}?quick_pull=1&template={3}', github.repository, 'trunk', steps.create-issue-branch.outputs.branchName, steps.template.outputs.template-name) }}
+        with:
+          message: |
+            **Hello**
+            ${{ env.PULL_REQUEST_URL }}
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          repo-token-user-login: "github-actions[bot]"
