--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -20,7 +20,7 @@ jobs:
       - uses: robvanderleek/create-issue-branch@master
         id: create-issue-branch
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.LABEL_SYNC_TOKEN }}
 
       - if: steps.create-issue-branch.outputs.branchName != ''
         id: template
