--- a/.github/issue-branch.yml
+++ b/.github/issue-branch.yml
@@ -1,8 +1,9 @@
 # https://github.com/robvanderleek/create-issue-branch#option-2-configure-github-action
-mode: auto
-silent: false
+# mode: auto
+# silent: false
+mode: chatops
 branchName: "issue-${issue.number}/${issue.title,}"
-autoCloseIssue: true
+# autoCloseIssue: true
 # gitSafeReplacementChar: "-"
 # branches:
 #   - label: |
