--- a/.github/workflows/debug.yml
+++ b/.github/workflows/debug.yml
@@ -3,7 +3,9 @@ name: DEBUG
 on:
   issues:
     types: [assigned]
-
+  issue_comment:
+    types: [created]
+    
 jobs:
     create_issue_branch_job:
         runs-on: ubuntu-latest
