--- a/labels/labels.yml
+++ b/labels/labels.yml
@@ -1,6 +1,6 @@
 # Types
 - name: "type: bug 🐛"
-  color: "e11d21"
+  color: e11d21
   description: "Something isn't working"
 
 - name: "type: documentation ✏️"
@@ -8,22 +8,22 @@
   description: "Improvements or additions to documentation"
 
 - name: "type: feature 🔨"
-  color: "009800"
+  color: 009800
   description: "New feature or request"
 
 - name: "type: chore 🧺"
-  color: "fbca04"
+  color: fbca04
   description: "Clean up, refactors, general maintenance"
 
 - name: "type: question ❓"
-  color: "cc317c"
+  color: cc317c
   description: "Further information is requested"
-
-- name: "type: discussion 📣"
-  color: "cc317c"
 
 - name: "type: design 📐"
   color: eb6420
+
+- name: "type: breaking"
+  color: d93f0b
 
 # Statuses
 - name: "status: duplicate"
