--- a/labels/labels.yml
+++ b/labels/labels.yml
@@ -26,6 +26,10 @@
   color: d93f0b
 
 # Statuses
+- name: "status: released ✌️"
+  color: cccccc
+  description: "This issue or pull request has been released"
+
 - name: "status: duplicate"
   color: cccccc
   description: "This issue or pull request already exists"
@@ -66,40 +70,45 @@
 
 # Points
 - name: "point: 0"
-  color: "fff7cc"
+  color: fff7c
   description: "XS — No work, just a record."
 
 - name: "point: 1"
-  color: "ffef99"
+  color: ffef99
   description: "S — Issue is well-understood, minimal complexity, likely a quick change"
 
 - name: "point: 2"
-  color: "ffe766"
+  color: ffe766
   description: "M — A small amount of research is needed and the change will require more time or effort"
 
 - name: "point: 3"
-  color: "ffdf32"
+  color: ffdf32
   description: "L — Substantial additional research is needed and the structural change necessary"
 
 - name: "point: 5"
-  color: "ffd700"
+  color: ffd700
   description: "XL — Partially understood, requires additional research and major changes necessary"
 
 - name: "point: 8"
-  color: "e5c100"
+  color: e5c100
   description: "XXL — Poorly understood, requires substantial research before complexity can be assessed"
 
 - name: "point: 13"
-  color: "b29600"
+  color: b29600
   description: "XXXL — Galaxy brain. Don't."
 
 - name: "point: 21"
-  color: "7f6b00"
+  color: 7f6b00
   description: "XXXXL — Stop!"
+
+# Releases
+- name: "release: skip"
+  color: cfd3d7
+  description: "Explicitly skip triggering a bump in the next release"
 
 # Epics
 - name: "epic: gatsby plugin"
-  color: "97fcba"
+  color: 97fcba
 
 - name: "epic: bandwidth billing"
-  color: "97fcba"
+  color: 97fcba
