fix label colors

--- a/labels/labels.yml
+++ b/labels/labels.yml
@@ -1,114 +1,114 @@
 # Types
 - name: "type: bug 🐛"
-  color: e11d21
+  color: "ECA8A8"
   description: "Something isn't working"
 
 - name: "type: documentation ✏️"
-  color: 207de5
+  color: "A8E8EC"
   description: "Improvements or additions to documentation"
 
 - name: "type: feature 🔨"
-  color: 009800
+  color: "B1ECA8"
   description: "New feature or request"
 
 - name: "type: chore 🧺"
-  color: fbca04
+  color: "F7FC97"
   description: "Clean up, refactors, general maintenance"
 
 - name: "type: question ❓"
-  color: cc317c
+  color: "ECA8EC"
   description: "Further information is requested"
 
 - name: "type: design 📐"
-  color: eb6420
+  color: "ECB5A8"
 
 - name: "type: breaking"
-  color: d93f0b
+  color: "ECA8A8"
 
 # Statuses
 - name: "status: released ✌️"
-  color: cccccc
+  color: "cccccc"
   description: "This issue or pull request has been released"
 
 - name: "status: duplicate"
-  color: cccccc
+  color: "cccccc"
   description: "This issue or pull request already exists"
 
 - name: "status: help wanted"
-  color: bfe5bf
+  color: "bfe5bf"
   description: "Extra attention is needed"
 
 - name: "status: invalid"
-  color: cccccc
+  color: "cccccc"
   description: "This doesn't seem right"
 
 - name: "status: good starter issue"
-  color: bfe5bf
+  color: "bfe5bf"
 
 - name: "status: wontfix ⛔️"
-  color: cccccc
+  color: "cccccc"
   description: "This will not be worked on"
 
 - name: "status: blocked ✋"
-  color: "990000"
+  color: "EC7A7C"
 
 - name: "status: blocking ✋"
-  color: "990000"
+  color: "EC7A7C"
 
 # Priorities
 - name: "priority: low"
-  color: 009800
+  color: "ADECA8"
 
 - name: "priority: medium"
-  color: fbca04
+  color: "ECEAA8"
 
 - name: "priority: high"
-  color: eb6420
+  color: "ECA8A8"
 
 - name: "priority: critical"
-  color: e11d21
+  color: "EC8585"
 
 # Points
 - name: "point: 0"
-  color: fff7cc
+  color: "fff7cc"
   description: "XS — No work, just a record."
 
 - name: "point: 1"
-  color: ffef99
+  color: "ffef99"
   description: "S — Issue is well-understood, minimal complexity, likely a quick change"
 
 - name: "point: 2"
-  color: ffe766
+  color: "ffe766"
   description: "M — A small amount of research is needed and the change will require more time or effort"
 
 - name: "point: 3"
-  color: ffdf32
+  color: "ffdf32"
   description: "L — Substantial additional research is needed and the structural change necessary"
 
 - name: "point: 5"
-  color: ffd700
+  color: "ffd700"
   description: "XL — Partially understood, requires additional research and major changes necessary"
 
 - name: "point: 8"
-  color: e5c100
+  color: "e5c100"
   description: "XXL — Poorly understood, requires substantial research before complexity can be assessed"
 
 - name: "point: 13"
-  color: b29600
+  color: "b29600"
   description: "XXXL — Galaxy brain. Don't."
 
 - name: "point: 21"
-  color: 7f6b00
+  color: "7f6b00"
   description: "XXXXL — Stop!"
 
 # Releases
 - name: "release: skip"
-  color: cfd3d7
+  color: "cfd3d7"
   description: "Explicitly skip triggering a bump in the next release"
 
 # Epics
 - name: "epic: gatsby plugin"
-  color: 97fcba
+  color: "97fcba"
 
 - name: "epic: bandwidth billing"
-  color: 97fcba
+  color: "97fcba"
