add epic issues action

--- a/labels/labels.yml
+++ b/labels/labels.yml
@@ -25,6 +25,10 @@
 - name: "type: breaking"
   color: "ECA8A8"
 
+- name: "type: epic ⛰️"
+  color: "ECA8A8"
+  description: "A body of work that is broken down into specific issues"
+
 # Statuses
 - name: "status: released ✌️"
   color: "cccccc"
