better color for epic label

--- a/labels/labels.yml
+++ b/labels/labels.yml
@@ -26,7 +26,7 @@
   color: "ECA8A8"
 
 - name: "type: epic ⛰️"
-  color: "ECA8A8"
+  color: "C3AED6"
   description: "A body of work that is broken down into specific issues"
 
 # Statuses
