--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,14 +11,14 @@ jobs:
     steps:
       - name: debug
         run: |
-          echo "branch: $GITHUB_REF"
+          echo "branch: $GITHUB_HEAD_REF"
           
       - name: extract id
         id: extract-id
         run: |
-          if [[ $GITHUB_REF =~ ^refs/heads/ch[0-9] ]] \
+          if [[ $GITHUB_HEAD_REF =~ ^refs/heads/ch[0-9] ]] \
           then \
-            id=$(echo $GITHUB_REF | cut -d'/' -f 3); \
+            id=$(echo $GITHUB_HEAD_REF | cut -d'/' -f 3); \
             echo "::set-output name=clubhouse-id::$id"; \
           fi
 
